--- a/Concentration/Concentration/Base.lproj/Main.storyboard
+++ b/Concentration/Concentration/Base.lproj/Main.storyboard
@@ -26,8 +26,8 @@
                                 <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ytE-tG-Jfr">
-                                <rect key="frame" x="178" y="44" width="144" height="232"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ytE-tG-Jfr">
+                                <rect key="frame" x="312" y="219" width="144" height="256"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="iLP-xy-5V6">
@@ -68,7 +68,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Gu5-Yd-CzZ">
-                                        <rect key="frame" x="0.0" y="80" width="144" height="72"/>
+                                        <rect key="frame" x="0.0" y="92" width="144" height="72"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r1r-Pb-1Vo">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="72"/>
@@ -105,7 +105,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="jGP-p9-ACr">
-                                        <rect key="frame" x="0.0" y="160" width="144" height="72"/>
+                                        <rect key="frame" x="0.0" y="184" width="144" height="72"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RoX-qi-iCS">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="72"/>
